--- a/src/components/searchbar/index.less
+++ b/src/components/searchbar/index.less
@@ -38,6 +38,7 @@
     .searchbar-form__cancel {
       color: #4791F5;
       padding:0 8px;
+      //display: none;
     }
   }
   .searchbar-autocomplete {
